Start: Tailwindcss, components, content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,35 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/components/*": [
+        "src/components/*"
+      ],
+      "~/hooks/*": [
+        "src/hooks/*"
+      ],
+      "~/context/*": [
+        "src/context/*"
+      ],
+      "~/pages/*": [
+        "src/pages/*"
+      ],
+      "~/config/*": [
+        "src/config/*"
+      ],
+      "~/styles/*": [
+        "src/styles/*"
+      ],
+      "~/services/*": [
+        "src/services/*"
+      ]
+    },
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -15,6 +43,12 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
