--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vime/core": "^5.3.3",
+    "@vime/react": "^5.3.3",
+    "@vime/vue-next": "^5.3.3",
     "classnames": "^2.3.1",
     "next": "12.3.1",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-youtube": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
